fixed managetickets mobile view + fixed overflowing words only for viewService (make sure to add this to every other page!!!)

--- a/EECS_HelpDesk/serviceStatus/static/css/viewAndEditServiceStatus.css
+++ b/EECS_HelpDesk/serviceStatus/static/css/viewAndEditServiceStatus.css
@@ -1,3 +1,7 @@
+body{
+    overflow-wrap: break-word;
+}
+
 .viewServiceStatusContainer, .editServiceStatusContainer{
     margin-left: 25%;
     margin-right: 25%;
@@ -94,6 +98,7 @@
     font-family: 'Inter';
     font-size: 16px; 
     color: #0d3273;
+    width: -webkit-fill-available;
 }
 
 .editServiceStatusContainer .editServiceStatusBox .statusLabel,.editServiceStatusContainer .editServiceStatusBox .descriptionLabel  {
